Modernizar AdminDashboard con métricas dinámicas y ranking de coaches